// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`templates main.twig should match snapshot for Suite 1`] = `
"type=passive

    host_name=
            changeme
    

    start_time=1556540579.709

    finish_time=-1

    return_code=

                service_description=\${testsuite.id}

        output=
         Sakuli suite \\"test-suite\\" 
    
        . (Last suite run: xx)
\\\\n
        <style>
    .modalDialog {
        width: 640px;
    }

    .modalDialog:target {
        width: auto;
        margin: 20px auto;
        overflow: scroll;
        position: fixed;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        z-index: 99999;
        opacity: 1;
        pointer-events: auto;
    }

    .modalDialog:target .close {
        display: block;
    }

    .modalDialog:target .screenshot {
        width: 100%;
        border: 2px solid #333;
    }

    .screenshot {
        width: 98%;
        border: 2px solid  gray;
        display: block;
        margin-left: auto;
        margin-right: auto;
        margin-bottom: 4px;
        cursor: -webkit-zoom-in;
        cursor: -moz-zoom-in;
    }

    .close {
        display: none;
        background: #aaa;
        color: #fff;
        line-height: 25px;
        position: absolute;
        right: 10px;
        text-align: center;
        top: 25px;
        width: 65px;
        text-decoration: none;
        font-weight: bold;
        -webkit-border-radius: 12px;
        -moz-border-radius: 12px;
        border-radius: 12px;
    }

    .close:hover {
        background: #333;
    }
</style><table style=\\"border-collapse: collapse;\\"><tr valign=\\"top\\"><td class=\\"service[OK]\\">
             Sakuli suite \\"test-suite\\" 
                             
                                        . (Last suite run: 
                        xx
            )
                    </td></tr></table>
    |    suite_test-suite=0.00s;0;0;;
 graph_type_suite=0;;;;
 suite__state=;;;;
 suite__warning=0s;;;;
 suite__critical=0s;;;;
     [check_sakuli]"
`;

exports[`templates main.twig should match snapshot for case 1`] = `
"type=passive

    host_name=
            changeme
    

    start_time=1556540580.355

    finish_time=-1

    return_code=

                service_description=_test-case

        output=
         Case \\"test-case\\" of Sakuli suite \\"\\" 
    
        . (Last suite run: xx)
\\\\n
        <style>
    .modalDialog {
        width: 640px;
    }

    .modalDialog:target {
        width: auto;
        margin: 20px auto;
        overflow: scroll;
        position: fixed;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        z-index: 99999;
        opacity: 1;
        pointer-events: auto;
    }

    .modalDialog:target .close {
        display: block;
    }

    .modalDialog:target .screenshot {
        width: 100%;
        border: 2px solid #333;
    }

    .screenshot {
        width: 98%;
        border: 2px solid  gray;
        display: block;
        margin-left: auto;
        margin-right: auto;
        margin-bottom: 4px;
        cursor: -webkit-zoom-in;
        cursor: -moz-zoom-in;
    }

    .close {
        display: none;
        background: #aaa;
        color: #fff;
        line-height: 25px;
        position: absolute;
        right: 10px;
        text-align: center;
        top: 25px;
        width: 65px;
        text-decoration: none;
        font-weight: bold;
        -webkit-border-radius: 12px;
        -moz-border-radius: 12px;
        border-radius: 12px;
    }

    .close:hover {
        background: #333;
    }
</style><table style=\\"border-collapse: collapse;\\"><tr valign=\\"top\\"><td class=\\"service[OK]\\">
             Case \\"test-case\\" of Sakuli suite \\"\\" 
                             
                                                . (Last suite run: 
                        xx
            )
                    </td></tr></table>
    |         [check_sakuli]"
`;

exports[`templates main.twig should match snapshot for step 1`] = `
"type=passive

    host_name=
            changeme
    

    start_time=1556540580.754

    finish_time=-1

    return_code=

                service_description=__step-1

        output=
         Step \\"step-1\\" in case \\"\\" of Sakuli suite \\"\\" 
    
        . (Last test step run: xx)
\\\\n
        <style>
    .modalDialog {
        width: 640px;
    }

    .modalDialog:target {
        width: auto;
        margin: 20px auto;
        overflow: scroll;
        position: fixed;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        z-index: 99999;
        opacity: 1;
        pointer-events: auto;
    }

    .modalDialog:target .close {
        display: block;
    }

    .modalDialog:target .screenshot {
        width: 100%;
        border: 2px solid #333;
    }

    .screenshot {
        width: 98%;
        border: 2px solid  gray;
        display: block;
        margin-left: auto;
        margin-right: auto;
        margin-bottom: 4px;
        cursor: -webkit-zoom-in;
        cursor: -moz-zoom-in;
    }

    .close {
        display: none;
        background: #aaa;
        color: #fff;
        line-height: 25px;
        position: absolute;
        right: 10px;
        text-align: center;
        top: 25px;
        width: 65px;
        text-decoration: none;
        font-weight: bold;
        -webkit-border-radius: 12px;
        -moz-border-radius: 12px;
        border-radius: 12px;
    }

    .close:hover {
        background: #333;
    }
</style><table style=\\"border-collapse: collapse;\\"><tr valign=\\"top\\"><td class=\\"service[OK]\\">
             Step \\"step-1\\" in case \\"\\" 
                             
                                                . (Last suite run: 
                        xx
            )
                    </td></tr></table>
    |         [check_sakuli]"
`;
